# Task-Agent-Starter-Kit

./: .env.example  .gitignore  LICENSE  README.md  main.py  pyproject.toml
app/: __init__.py  app.py
app/static/: dashboard.js  styles.css
app/templates/: dashboard.html  index.html
integrations/email/: fetcher.py  gmail.py
tasks/: agents.py  execution.py  processor.py  storage.py
tests/: babyagi.py  colorlogs.py  embedding.py  entity_add.py  graph_agent.py  ollama_raw.py  ollama_streaming.py
utils/: custom_log_formatter.py  ollama.py
